--- a/src/resources/views/partials/horizontal-menu.hbs
+++ b/src/resources/views/partials/horizontal-menu.hbs
@@ -38,7 +38,14 @@
     <nav class="bottom-navbar">
         <div class="container-fluid">
             <ul class="nav page-navigation">
-                
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/">
+                        <i class="mdi mdi-web menu-icon"></i>
+                        <span class="menu-title">Dashboard</span>
+                        <i class="menu-arrow"></i>
+                    </a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/system/list">
                         <i class="mdi mdi-web menu-icon"></i>
@@ -46,10 +53,17 @@
                         <i class="menu-arrow"></i>
                     </a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/user/list">
                         <i class="mdi mdi-account-multiple menu-icon"></i>
                         <span class="menu-title">Quản lý người dùng</span>
+                        <i class="menu-arrow"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/blog/list">
+                        <i class="mdi mdi-blogger menu-icon"></i>
+                        <span class="menu-title">Quản lý blog</span>
                         <i class="menu-arrow"></i>
                     </a>
                 </li>
@@ -63,7 +77,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/competition/ranks">
                         <i class="mdi mdi-highway menu-icon"></i>
-                        <span class="menu-title">Quản lý thi đấu</span>
+                        <span class="menu-title">Quản lý danh sách thi đấu</span>
                         <i class="menu-arrow"></i>
                     </a>
                 </li>
