--- a/src/resources/views/subjects/theory.hbs
+++ b/src/resources/views/subjects/theory.hbs
@@ -1,4 +1,4 @@
-<section class="subject__content">
+<section class="subject__theory">
     <div class="col-lg-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
@@ -21,7 +21,7 @@
                                         <button class="ml-4 text-primary p-1 btn border border-primary" data-toggle="modal" data-target="#editUnitModal" data-name="{{this.name}}" data-id="{{this._id}}" data-subject="{{this.subjectID}}">
                                             <i class="mdi mdi-lead-pencil" ></i>
                                         </button>
-                                        <a class="ml-4  p-1 btn border border-primary " href="/units/{{this._id}}/detail">
+                                        <a class="ml-4 text-primary  p-1 btn border border-primary " href="/units/{{this._id}}/detail">
                                             <i class="fa-solid fa-ellipsis"></i>
                                         </a>
                                         <button class="ml-4 text-orange p-1 btn border border-danger" data-toggle="modal" data-target="#deleteUnitModal" data-id="{{this._id}}">
