--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,26 +1,83 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="/">404 education</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="https://fullstack.edu.vn/static/media/fallback-avatar.155cdb2376c5d99ea151.jpg" alt="" class="user-avatar">
-            Đình Lan
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/me/stored/courses">khóa học của tôi</a>
-            <a class="dropdown-item" href="#">Bài viết của tôi</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Đăng xuất</a>
+<nav class="sets show colorRefresh-setPageOnly has-footer qad-is-showing flex-sidebar theme-default" itemscope=""
+  itemtype="http://schema.org/WebPage">
+  <div class="site">
+    <div class="TopNavigationWrapper" id="TopNavigationReactTarget">
+      <header class="TopNavigation" itemscope="" itemtype="http://schema.org/WPHeader" role="banner">
+        <div class="TopNavigation-content">
+          <div class="TopNavigation-contentLeft">
+            <div class="TopNavigationItem">
+              <div class="SiteHeaderLogo">
+                <div class="SiteHeaderLogo-full">
+                  <a href="/">
+                    <img src="/img/trangchu.jpg" alt="logo" style="width: 30px;height: 30px;">
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="TopNavigation-menuItems">
+
+              <div class="NavigationTabs"><span class="sghi5jd"><a class="NavigationTab r1k7ho1y e1kvq86p"
+                    data-testid="NavigationTab-anchor" href="/latest"><span class="NavigationTab--span">Trang
+                      chủ</span></a></span><a class="NavigationTab r1k7ho1y e1kvq86p" data-testid="NavigationTab-anchor"
+                  href="/explanations">
+                  <span class="NavigationTab--span">Blog</span></a>
+                <div type="button" aria-expanded="false" class="d17q9lq7"><button
+                    class="NavigationTab r1ep6ugx r1k7ho1y e1kvq86p" data-testid="NavigationTab-anchor"><span
+                      class="NavigationTab--span">Danh sách khóa học
+                      <svg aria-label="chevron down" class="AssemblyIcon AssemblyIcon--small-deprecated"
+                        role="img"><noscript></noscript>
+                        <use xlink:href="#chevron-down"></use><noscript></noscript>
+                      </svg></span></button></div>
+              </div>
+              <div class="TopNavigationItem">
+                <div data-overlay-container="true"><button type="button" aria-haspopup="true" aria-expanded="false"
+                    id="react-aria1488067590-32" aria-label="Tạo phòng"
+                    class="AssemblyButtonBase AssemblyPrimaryButton--default AssemblyButtonBase--small AssemblyButtonBase--padding"><span>Tạo
+                      phòng</span><svg aria-label="chevron down" class="AssemblyIcon AssemblyIcon--medium-deprecated"
+                      role="img"><noscript></noscript>
+                      <use xlink:href="#chevron-down"></use><noscript></noscript>
+                    </svg></button></div>
+              </div>
+            </div>
+          </div>
+          <div class="TopNavigationItem">
+
+            {{!-- search --}}
+
+
+            <div class="TopNavigation-contentRight">
+            </div>
+            <div class="TopNavigationItem">
+              <div class="s1tlc74t m12j6brq">
+                <form action="/search/" class="s19dmjr1" role="search">
+                  <div class="s2y71yx">
+                    <div class="s12xd3w5"><svg aria-label="search" class="AssemblyIcon AssemblyIcon--medium-deprecated"
+                        role="img"><noscript></noscript>
+                        <use xlink:href="#search"></use><noscript></noscript>
+                      </svg></div>
+                    <div class="s1b8qj0">
+                      <div class="UIAutosuggest">
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="SiteAvatar TopNavigationItem">
+              {{!-- ảnh đại diện --}}
+              <div data-overlay-container="true">
+                <div type="button" tabindex="0" id="react-aria1488067590-35" aria-haspopup="true" aria-expanded="false"
+                  aria-label="Cài đặt" role="button"><img alt="Ảnh hồ sơ" class="AssemblyAvatar" src=""
+                    style="width: 30px;height: 30px;">
+                </div>
+              </div>
+
+              {{!-- không có tài khoản --}}
+              {{!-- button đăng nhập --}}
+            </div>
           </div>
         </div>
-      </ul>
+      </header>
     </div>
   </div>
 </nav>
