--- a/src/resources/views/partials/horizontal-menu.hbs
+++ b/src/resources/views/partials/horizontal-menu.hbs
@@ -10,7 +10,7 @@
         </li>
 
         <li>
-            <a href="/admin">
+            <a href="/admin/">
                 <span class="icon">
                     <ion-icon name="home-outline"></ion-icon>
                 </span>
