--- a/src/resources/views/theories/detail.hbs
+++ b/src/resources/views/theories/detail.hbs
@@ -10,22 +10,33 @@
                             <div class="card-title">Bài {{lesson.lessonNumber}} - {{lesson.name}}</div>
                         </div>
                         <div class="d-flex align-items-center">
+                            {{#ifCond subject.name "===" "Phần Lý Thuyết"}}
+                                {{#each theory}}
+                                    <a class="btn btn-outline-primary" href="/exercises/detail?lesson={{this.lesson._id}}">
+                                        <i class="mdi mdi-book-open-page-variant mr-2"></i>
+                                        Bài tập vận dụng
+                                    </a>
+                                {{/each}}
+                             {{/ifCond}}
                             {{#each theory}}
-                            <a class="btn btn-outline-primary" href="/exercises/detail?lesson={{this.lesson._id}}">
-                                <i class="mdi mdi-book-open-page-variant mr-2"></i>
-                                Bài tập vận dụng
-                            </a>
-                            <form class="ml-4 mb-0" action="/theories/{{this.lesson._id}}/export" method="POST">
-                                <button class="btn btn-outline-danger" type="submit">
-                                    <i class="mdi mdi-file-pdf mr-2"></i>
-                                    Xuất PDF
-                                </button>
-                            </form>
+                                <form class="ml-4 mb-0" action="/theories/{{this.lesson._id}}/export" method="POST">
+                                    <button class="btn btn-outline-danger" type="submit">
+                                        <i class="mdi mdi-file-pdf mr-2"></i>
+                                        Xuất PDF
+                                    </button>
+                                </form>
                             {{/each}}
+                           {{#ifCond subject.name "===" "Phần Lý Thuyết"}}
                             <a class="btn btn-outline-warning btn-icon-text ml-4" href="/units/{{unit._id}}/detail"> 
                                 <i class="mdi mdi-reload btn-icon-prepend"></i>
                                 Quay lại
                             </a>
+                            {{else}}
+                             <a class="btn btn-outline-warning btn-icon-text ml-4" href="/subjects/{{grade._id}}/bible"> 
+                                <i class="mdi mdi-reload btn-icon-prepend"></i>
+                                Quay lại
+                            </a>
+                            {{/ifCond}}
                         </div>
                     </div>
                 {{#each theory}}
@@ -99,8 +110,6 @@
     <div id="success" style="visibility: hidden;">{{success}}</div>
     {{/if}}
 {{/if}}
-
-
 <script>
     var msgError = document.getElementById('errors');
         ///toast message
