--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,83 +1,82 @@
-<nav class="sets show colorRefresh-setPageOnly has-footer qad-is-showing flex-sidebar theme-default" itemscope=""
-  itemtype="http://schema.org/WebPage">
-  <div class="site">
-    <div class="TopNavigationWrapper" id="TopNavigationReactTarget">
-      <header class="TopNavigation" itemscope="" itemtype="http://schema.org/WPHeader" role="banner">
-        <div class="TopNavigation-content">
-          <div class="TopNavigation-contentLeft">
-            <div class="TopNavigationItem">
-              <div class="SiteHeaderLogo">
-                <div class="SiteHeaderLogo-full">
-                  <a href="/">
-                    <img src="/img/trangchu.jpg" alt="logo" style="width: 30px;height: 30px;">
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="TopNavigation-menuItems">
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a href="/"><img src="/img/aboutus.png" alt="logo"
+        style="height: 30px; width:30px; margin-right : 20px; margin-left : 10px">
+    </a>
 
-              <div class="NavigationTabs"><span class="sghi5jd"><a class="NavigationTab r1k7ho1y e1kvq86p"
-                    data-testid="NavigationTab-anchor" href="/latest"><span class="NavigationTab--span">Trang
-                      chủ</span></a></span><a class="NavigationTab r1k7ho1y e1kvq86p" data-testid="NavigationTab-anchor"
-                  href="/explanations">
-                  <span class="NavigationTab--span">Blog</span></a>
-                <div type="button" aria-expanded="false" class="d17q9lq7"><button
-                    class="NavigationTab r1ep6ugx r1k7ho1y e1kvq86p" data-testid="NavigationTab-anchor"><span
-                      class="NavigationTab--span">Danh sách khóa học
-                      <svg aria-label="chevron down" class="AssemblyIcon AssemblyIcon--small-deprecated"
-                        role="img"><noscript></noscript>
-                        <use xlink:href="#chevron-down"></use><noscript></noscript>
-                      </svg></span></button></div>
-              </div>
-              <div class="TopNavigationItem">
-                <div data-overlay-container="true"><button type="button" aria-haspopup="true" aria-expanded="false"
-                    id="react-aria1488067590-32" aria-label="Tạo phòng"
-                    class="AssemblyButtonBase AssemblyPrimaryButton--default AssemblyButtonBase--small AssemblyButtonBase--padding"><span>Tạo
-                      phòng</span><svg aria-label="chevron down" class="AssemblyIcon AssemblyIcon--medium-deprecated"
-                      role="img"><noscript></noscript>
-                      <use xlink:href="#chevron-down"></use><noscript></noscript>
-                    </svg></button></div>
-              </div>
-            </div>
-          </div>
-          <div class="TopNavigationItem">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Trang chủ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Tạo phòng
+                <span>
+                  {{!-- kiếm hình hợp lý --}}
+                  <img src="/img/aboutus.png" alt="logo"
+                    style="height: 15px; width:15px; margin-right : 20px; margin-left : 10px">
+                </span>
+              </a>
 
-            {{!-- search --}}
+            </li>
+            <li><a class="dropdown-item" href="#">Thi đấu
+                <span>
+                  {{!-- kiếm hình hợp lý --}}
+                  <img src="/img/aboutus.png" alt="logo"
+                    style="height: 15px; width:15px; margin-right : 20px; margin-left : 10px">
+                </span>
+              </a></li>
+            <li><a class="dropdown-item" href="#">Blog
+                <span>
+                  {{!-- kiếm hình hợp lý --}}
+                  <img src="/img/aboutus.png" alt="logo"
+                    style="height: 15px; width:15px; margin-right : 20px; margin-left : 10px">
+                </span>
+              </a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Hỏi đáp
+                <span>
+                  {{!-- kiếm hình hợp lý --}}
+                  <img src="/img/aboutus.png" alt="logo"
+                    style="height: 15px; width:15px; margin-right : 20px; margin-left : 10px">
+                </span>
+              </a></li>
+          </ul>
+        </li>
+      </ul>
 
+      {{!-- search --}}
+      {{!-- <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form> --}}
 
-            <div class="TopNavigation-contentRight">
-            </div>
-            <div class="TopNavigationItem">
-              <div class="s1tlc74t m12j6brq">
-                <form action="/search/" class="s19dmjr1" role="search">
-                  <div class="s2y71yx">
-                    <div class="s12xd3w5"><svg aria-label="search" class="AssemblyIcon AssemblyIcon--medium-deprecated"
-                        role="img"><noscript></noscript>
-                        <use xlink:href="#search"></use><noscript></noscript>
-                      </svg></div>
-                    <div class="s1b8qj0">
-                      <div class="UIAutosuggest">
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <div class="SiteAvatar TopNavigationItem">
-              {{!-- ảnh đại diện --}}
-              <div data-overlay-container="true">
-                <div type="button" tabindex="0" id="react-aria1488067590-35" aria-haspopup="true" aria-expanded="false"
-                  aria-label="Cài đặt" role="button"><img alt="Ảnh hồ sơ" class="AssemblyAvatar" src=""
-                    style="width: 30px;height: 30px;">
-                </div>
-              </div>
-
-              {{!-- không có tài khoản --}}
-              {{!-- button đăng nhập --}}
-            </div>
+      <div class="SiteAvatar TopNavigationItem">
+        {{!-- ảnh đại diện --}}
+        <div data-overlay-container="true">
+          <div type="button" tabindex="0" id="react-aria1488067590-35" aria-haspopup="true" aria-expanded="false"
+            aria-label="Cài đặt" role="button">
+            <img alt="Ảnh hồ sơ" class="AssemblyAvatar" src="" style="width: 30px;height: 30px;">
           </div>
         </div>
-      </header>
+
+        {{!-- không có tài khoản --}}
+        {{!-- button đăng nhập --}}
+      </div>
     </div>
   </div>
 </nav>
