--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trang học giáo lý</title>
-    <link rel="icon" href="/img/logo.jpg" type="image/jpg" sizes="16x16" />
+    <link rel="icon" href="https://hdgmvietnam.com//Image/Picture/UB%20GDCG.jpg" type="image/jpg" sizes="16x16" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
