--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,49 +1,86 @@
-<nav class="sets show colorRefresh-setPageOnly has-footer qad-is-showing flex-sidebar theme-default" itemscope=""
-  itemtype="http://schema.org/WebPage">
+<nav
+  class="sets show colorRefresh-setPageOnly has-footer qad-is-showing flex-sidebar theme-default"
+  itemscope=""
+  itemtype="http://schema.org/WebPage"
+>
   <div class="site">
     <div class="TopNavigationWrapper" id="TopNavigationReactTarget">
-      <header class="TopNavigation" itemscope="" itemtype="http://schema.org/WPHeader" role="banner">
+      <header
+        class="TopNavigation"
+        itemscope=""
+        itemtype="http://schema.org/WPHeader"
+        role="banner"
+      >
         <div class="TopNavigation-content">
           <div class="TopNavigation-contentLeft">
             <div class="TopNavigationItem">
               <div class="SiteHeaderLogo">
                 <div class="SiteHeaderLogo-full">
                   <a href="/">
-                    <img src="/img/trangchu.jpg" alt="logo" style="width: 30px;height: 30px;">
+                    <img
+                      src="https://hdgmvietnam.com//Image/Picture/UB%20GDCG.jpg"
+                      alt="logo"
+                      style="width: 70px;height: 70px;"
+                    />
                   </a>
                 </div>
               </div>
             </div>
             <div class="TopNavigation-menuItems">
 
-              <div class="NavigationTabs"><span class="sghi5jd"><a class="NavigationTab r1k7ho1y e1kvq86p"
-                    data-testid="NavigationTab-anchor" href="/latest"><span class="NavigationTab--span">Trang
-                      chủ</span></a></span><a class="NavigationTab r1k7ho1y e1kvq86p" data-testid="NavigationTab-anchor"
-                  href="/explanations">
+              <div class="NavigationTabs"><span class="sghi5jd"><a
+                    class="NavigationTab r1k7ho1y e1kvq86p"
+                    data-testid="NavigationTab-anchor"
+                    href="/latest"
+                  ><span class="NavigationTab--span">Trang chủ</span></a></span>
+                <a
+                  class="NavigationTab r1k7ho1y e1kvq86p"
+                  data-testid="NavigationTab-anchor"
+                  href="/explanations"
+                >
                   <span class="NavigationTab--span">Blog</span></a>
-                <div type="button" aria-expanded="false" class="d17q9lq7"><button
-                    class="NavigationTab r1ep6ugx r1k7ho1y e1kvq86p" data-testid="NavigationTab-anchor"><span
-                      class="NavigationTab--span">Danh sách khóa học
-                      <svg aria-label="chevron down" class="AssemblyIcon AssemblyIcon--small-deprecated"
-                        role="img"><noscript></noscript>
-                        <use xlink:href="#chevron-down"></use><noscript></noscript>
+                <div
+                  type="button"
+                  aria-expanded="false"
+                  class="d17q9lq7"
+                ><button
+                    class="NavigationTab r1ep6ugx r1k7ho1y e1kvq86p"
+                    data-testid="NavigationTab-anchor"
+                  ><span class="NavigationTab--span">Danh sách khóa học
+                      <svg
+                        aria-label="chevron down"
+                        class="AssemblyIcon AssemblyIcon--small-deprecated"
+                        role="img"
+                      ><noscript></noscript>
+                        <use xlink:href="#chevron-down"></use><noscript
+                        ></noscript>
                       </svg></span></button></div>
               </div>
               <div class="TopNavigationItem">
-                <div data-overlay-container="true"><button type="button" aria-haspopup="true" aria-expanded="false"
-                    id="react-aria1488067590-32" aria-label="Tạo phòng"
-                    class="AssemblyButtonBase AssemblyPrimaryButton--default AssemblyButtonBase--small AssemblyButtonBase--padding"><span>Tạo
-                      phòng</span><svg aria-label="chevron down" class="AssemblyIcon AssemblyIcon--medium-deprecated"
-                      role="img"><noscript></noscript>
-                      <use xlink:href="#chevron-down"></use><noscript></noscript>
-                    </svg></button></div>
+                <div data-overlay-container="true">
+                  <a
+                    type="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    id="react-aria1488067590-32"
+                    aria-label="Tạo phòng"
+                    href="/competition"
+                    class="AssemblyButtonBase AssemblyPrimaryButton--default AssemblyButtonBase--small AssemblyButtonBase--padding"
+                  ><span>Thi Đấu</span><svg
+                      aria-label="chevron down"
+                      class="AssemblyIcon AssemblyIcon--medium-deprecated"
+                      role="img"
+                    ><noscript></noscript>
+                      <use xlink:href="#chevron-down"></use><noscript
+                      ></noscript>
+                    </svg></a>
+                    </div>
               </div>
             </div>
           </div>
           <div class="TopNavigationItem">
 
-            {{!-- search --}}
-
+            {{! search }}
 
             <div class="TopNavigation-contentRight">
             </div>
@@ -51,8 +88,11 @@
               <div class="s1tlc74t m12j6brq">
                 <form action="/search/" class="s19dmjr1" role="search">
                   <div class="s2y71yx">
-                    <div class="s12xd3w5"><svg aria-label="search" class="AssemblyIcon AssemblyIcon--medium-deprecated"
-                        role="img"><noscript></noscript>
+                    <div class="s12xd3w5"><svg
+                        aria-label="search"
+                        class="AssemblyIcon AssemblyIcon--medium-deprecated"
+                        role="img"
+                      ><noscript></noscript>
                         <use xlink:href="#search"></use><noscript></noscript>
                       </svg></div>
                     <div class="s1b8qj0">
@@ -64,16 +104,28 @@
               </div>
             </div>
             <div class="SiteAvatar TopNavigationItem">
-              {{!-- ảnh đại diện --}}
+              {{! ảnh đại diện }}
               <div data-overlay-container="true">
-                <div type="button" tabindex="0" id="react-aria1488067590-35" aria-haspopup="true" aria-expanded="false"
-                  aria-label="Cài đặt" role="button"><img alt="Ảnh hồ sơ" class="AssemblyAvatar" src=""
-                    style="width: 30px;height: 30px;">
+                <div
+                  type="button"
+                  tabindex="0"
+                  id="react-aria1488067590-35"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                  aria-label="Cài đặt"
+                  role="button"
+                >
+                  <img
+                    alt="Ảnh hồ sơ"
+                    class="AssemblyAvatar"
+                    src="/img/nobody.jpg"
+                    style="width: 30px;height: 30px;"
+                  />
                 </div>
               </div>
 
-              {{!-- không có tài khoản --}}
-              {{!-- button đăng nhập --}}
+              {{! không có tài khoản }}
+              {{! button đăng nhập }}
             </div>
           </div>
         </div>
